Cleanup printer to reduce code duplication